--- a/src/app/modules/main/pages/home/home.component.html
+++ b/src/app/modules/main/pages/home/home.component.html
@@ -15,7 +15,7 @@
             Financie até 80% do seu novo imóvel, com
             <br>menos burocracia e mais flexibilidade.
            </p>
-          <button type="button" class="simple-elevated-button btn" (click)="simulateInvestiment()">
+          <button type="button" class="simple-elevated-button btn" (click)="simulateInvestment()">
             Simular agora
           </button>
         </div>
@@ -32,7 +32,7 @@
             Financie até 80% do seu novo imóvel, com
             <br>menos burocracia e mais flexibilidade.
            </p>
-          <button type="button" class="simple-elevated-button btn" (click)="simulateInvestiment()">
+          <button type="button" class="simple-elevated-button btn" (click)="simulateInvestment()">
             Simular agora
           </button>
         </div>
@@ -138,14 +138,14 @@
           </div>
           <div class="search-form-field" style="width: 30%;">
             <label class="form-label pt-1"><i class="bi bi-currency-dollar"></i>&nbsp;Imóvel até</label>
-            <input formControlName="price" type="number" class="form-control input-style" placeholder="Insira o valor"
-             matInput
-             type="text"
-             prefix="R$ "
-             mask="separator.2"
-             [decimalMarker]="','"
-             [thousandSeparator]="'.'"
-             [dropSpecialCharacters]="true">
+            <input formControlName="price" class="form-control input-style"
+              matInput
+              type="text" 
+              prefix="R$ " 
+              mask="separator" 
+              thousandSeparator="." 
+              placeholder="Insira o valor" 
+              (keyup)="propertyPriceCurrencyMask($event.target)">
           </div>
           <div class="search-form-field" style="width: 20%;">
             <label class="form-label pt-1">&nbsp;Quartos</label>
@@ -203,14 +203,14 @@
           </div>
           <div class="search-form-field rounded-3 w-100 mb-3">
             <label class="form-label pt-1"><i class="bi bi-currency-dollar"></i>&nbsp;Imóvel até</label>
-            <input formControlName="price" type="number" class="form-control input-style" placeholder="Insira o valor"
+            <input class="form-control input-style" formControlName="price"
               matInput
-              type="text"
-              prefix="R$ "
-              mask="separator.2"
-              [decimalMarker]="','"
-              [thousandSeparator]="'.'"
-              [dropSpecialCharacters]="true">
+              type="text" 
+              prefix="R$ " 
+              mask="separator" 
+              thousandSeparator="." 
+              placeholder="Insira o valor" 
+              (keyup)="propertyPriceCurrencyMask($event.target)">
           </div>
           <div class="search-form-field flex-fill rounded-3">
             <label class="form-label pt-1">&nbsp;Quartos</label>
