--- a/src/app/modules/main/pages/search-property/components/search-result/search-result.component.html
+++ b/src/app/modules/main/pages/search-property/components/search-result/search-result.component.html
@@ -31,18 +31,16 @@
         </div>
 
         <div class="card-body justify-content-center">
-
-          <div class="d-flex flex-row justify-content-between pb-2" style="height:22px;">
+          <div class="d-flex flex-row justify-content-between pb-2 pt-2" style="height:22px;">
             <div class="d-flex align-items-center">
               <img src="/assets/icons/homer.png">
               &nbsp;&nbsp;
               <p class="fs-5 fw-semibold pt-4">HOMER</p>
             </div>
-            <a href="#" style="color:#012942;">
+            <a href="" style="color:#012942;">
               <i class="bi bi-three-dots-vertical"></i>
             </a>
           </div>
-
           <div class="d-flex flex-row pt-4 pb-2">
             <p style="line-height: 18px;">
               <span class="fs-5 fw-semibold">
@@ -58,14 +56,15 @@
           </p>
           <p class="pb-2" style="line-height: 18px;">
             <span class="fs-5 fw-semibold">
-              A partir de {{getFormattedPrice(col.price.minimumPrice)}}
+              A partir de {{ col.price.minimumPrice.toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' }) }}
+              <!-- A partir de {{ propertyPriceCurrencyMask(col.price.minimumPrice) }} -->
             </span>
             <br>
           </p>
           <div class="column pb-2">
-            <label class="form-label pt-1"><i class="bi bi-lamp"></i>&nbsp;{{col.size.roomsCount}}</label>
+            <label class="form-label pt-1"><i class="fa fa-bed"></i>&nbsp;{{col.size.roomsCount}}</label>
             &nbsp;
-            <label class="form-label pt-1"><i class="bi bi-car-front-fill"></i>&nbsp;{{col.size.parkingSpotsCount}}</label>
+            <label class="form-label pt-1"><i class="fa fa-car"></i>&nbsp;{{col.size.parkingSpotsCount}}</label>
           </div>
           <div class="d-flex flex-row pb-2">
             <p style="line-height: 18px;">
@@ -77,8 +76,13 @@
               </span>
             </p>
           </div>
-          <div class="text-center">
-            <button type="button" class="btn btn-outline-danger fw-semibold">Fale com o Especialista</button>
+          <div class="d-flex flex-row text-center">
+            <button type="button" class="btn btn-sm btn-danger fw-semibold col-4">
+              Financie
+            </button>&nbsp;
+            <button type="button" class="btn btn-sm btn-outline-danger fw-semibold col-6 flex-fill">
+              Fale com o Especialista
+            </button>
           </div>
         </div>
       </div>
