--- a/src/app/modules/main/pages/search-property/components/search-result/search-result.component.html
+++ b/src/app/modules/main/pages/search-property/components/search-result/search-result.component.html
@@ -78,9 +78,9 @@
           </div>
           <div class="d-flex flex-row text-center">
             <button type="button" class="btn btn-sm btn-danger fw-semibold col-4">
-              Financie
+              Simule
             </button>&nbsp;
-            <button type="button" class="btn btn-sm btn-outline-danger fw-semibold col-6 flex-fill">
+            <button class="btn btn-sm btn-outline-danger fw-semibold col-6 flex-fill" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="setPropertData(col)">
               Fale com o Especialista
             </button>
           </div>
