--- a/src/app/modules/main/pages/search-property/components/search-result/search-result.component.html
+++ b/src/app/modules/main/pages/search-property/components/search-result/search-result.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-12 mt-4 p-4">
+<div class="col-md-12 mt-2 p-2">
   <div class="d-flex flex-row flex-wrap justify-content-center">
     <div class="row justify-content-center">
 
@@ -31,15 +31,12 @@
         </div>
 
         <div class="card-body justify-content-center">
-          <div class="d-flex flex-row justify-content-between pb-2 pt-2" style="height:22px;">
+          <div class="d-flex pb-2 pt-2" style="height:22px;">
             <div class="d-flex align-items-center">
               <img src="/assets/icons/homer.png">
               &nbsp;&nbsp;
               <p class="fs-5 fw-semibold pt-4">HOMER</p>
             </div>
-            <a href="" style="color:#012942;">
-              <i class="bi bi-three-dots-vertical"></i>
-            </a>
           </div>
           <div class="d-flex flex-row pt-4 pb-2">
             <p style="line-height: 18px;">
@@ -57,7 +54,6 @@
           <p class="pb-2" style="line-height: 18px;">
             <span class="fs-5 fw-semibold">
               A partir de {{ col.price.minimumPrice.toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' }) }}
-              <!-- A partir de {{ propertyPriceCurrencyMask(col.price.minimumPrice) }} -->
             </span>
             <br>
           </p>
