--- a/src/app/modules/main/pages/search-property/search-property.component.html
+++ b/src/app/modules/main/pages/search-property/search-property.component.html
@@ -10,13 +10,13 @@
 
 <div class="first col-md-12 p-4">
   <div class="d-flex flex-column justify-content-center align-items-center">
-    <div class="col-md-12 pb-3">
+    <div class="col-md-12">
      
      <!-- WEB FORM -->
 
      <form [formGroup]="propertySearchForm" class="web">
        <div class="d-flex flex-row justify-content-center">
-        <div class="search-form-field rounded">
+        <div class="search-form-field m-2 rounded">
           <label class="form-label">Estado</label>
           <div class="d-flex flex-row align-items-center w-100">
             <select formControlName="state" class="input-style form-control form-select" aria-label=".form-select-lg example" (change)="getPropertiesList()">
@@ -24,8 +24,7 @@
             </select>
           </div>
         </div>
-        &nbsp;&nbsp;
-        <div class="search-form-field rounded" style="min-width: 180px; max-width: 250px;">
+        <div class="search-form-field m-2 rounded" style="min-width: 180px; max-width: 250px;">
           <label class="form-label">Cidade</label>
           <div class="d-flex flex-row align-items-center w-100">
             <select formControlName="city" class="input-style form-control form-select" aria-label=".form-select-lg example" (change)="cityChanged()">
@@ -33,8 +32,7 @@
             </select>
           </div>
         </div>
-        &nbsp;&nbsp;
-        <div class="search-form-field rounded" style="min-width: 180px;">
+        <div class="search-form-field m-2 rounded" style="min-width: 180px;">
           <label class="form-label">Bairro</label>
           <div class="d-flex flex-row align-items-center w-100">
             <select formControlName="district" class="input-style form-control form-select" aria-label=".form-select-lg example" (change)="getPropertiesList()">
@@ -43,8 +41,7 @@
             </select>
           </div>
         </div>
-        &nbsp;&nbsp;
-        <div class="search-form-field rounded" style="min-width: 180px;">
+        <div class="search-form-field m-2 rounded" style="min-width: 180px;">
           <label class="form-label">Tipologia</label>
           <div class="d-flex flex-row align-items-center w-100">
             <select formControlName="typology" class="input-style form-control form-select" aria-label=".form-select-lg example" (change)="getPropertiesList()">
@@ -52,8 +49,7 @@
             </select>
           </div>
         </div>
-        &nbsp;&nbsp;
-        <div class="search-form-field rounded" style="max-width: 180px;">
+        <div class="search-form-field m-2 rounded" style="max-width: 180px;">
           <label class="form-label">Valor Máx</label>
           <div class="d-flex flex-row align-items-baseline w-100">
             <input class="input-style form-control" formControlName="price" (change)="priceChanged()"
@@ -66,20 +62,7 @@
               (keyup)="propertyPriceCurrencyMask($event.target)">
           </div>
         </div>
-        &nbsp;&nbsp;
-        <div class="search-form-field rounded">
-          <label class="form-label">Quartos</label>
-          <div class="d-flex flex-row align-items-center w-100">
-            <select formControlName="rooms" class="input-style form-control form-select" aria-label=".form-select-lg example" (change)="getPropertiesList()">
-              <option value="1">1</option>
-              <option value="2">2</option>
-              <option value="3">3</option>
-              <option value="4">4</option>
-            </select>
-          </div>
-        </div>
-        &nbsp;&nbsp;
-        <div class="search-form-field rounded">
+        <div class="search-form-field m-2 rounded">
           <label class="form-label">Área</label>
           <div class="d-flex flex-row align-items-center w-100">
             <select formControlName="area" class="input-style form-control form-select" aria-label=".form-select-lg example" (change)="getPropertiesList()">
@@ -97,8 +80,18 @@
             </select>
           </div>
         </div>
-        &nbsp;&nbsp;
-        <div class="search-form-field rounded">
+        <div class="search-form-field m-2 rounded">
+          <label class="form-label">Quartos</label>
+          <div class="d-flex flex-row align-items-center w-100">
+            <select formControlName="rooms" class="input-style form-control form-select" aria-label=".form-select-lg example" (change)="getPropertiesList()">
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+            </select>
+          </div>
+        </div>
+        <div class="search-form-field m-2 rounded">
           <label class="form-label">Vagas</label>
           <div class="d-flex flex-row align-items-center w-100">
             <select formControlName="parking_spot" class="input-style form-control form-select" aria-label=".form-select-lg example" (change)="getPropertiesList()">
@@ -109,8 +102,7 @@
             </select>
           </div>
         </div>
-        &nbsp;&nbsp;
-        <div class="search-form-field rounded" style="min-width: 180px;">
+        <div class="search-form-field m-2 rounded">
           <label class="form-label">Incorporadoras</label>
           <div class="d-flex flex-row align-items-center w-100">
             <select formControlName="property_developer" class="input-style form-control form-select" aria-label=".form-select-lg example" (change)="getPropertiesList()">
@@ -127,7 +119,7 @@
      <form [formGroup]="propertySearchForm" class="mobile">
       <div class="d-flex flex-column justify-content-center" style="width: 100%;">
        <div class="d-flex flex-row flex-wrap">
-        <div class="search-form-field rounded flex-fill">
+        <div class="search-form-field rounded flex-fill m-2">
           <label class="form-label">Estado</label>
           <div class="d-flex flex-row align-items-center w-100">
             <select formControlName="state" class="input-style form-control form-select" aria-label=".form-select-lg example" (change)="getPropertiesList()">
@@ -135,7 +127,7 @@
             </select>
           </div>
         </div>
-        <div class="search-form-field rounded flex-fill">
+        <div class="search-form-field rounded flex-fill m-2">
           <label class="form-label">Cidade</label>
           <div class="d-flex flex-row align-items-center w-100">
             <select formControlName="city" class="input-style form-control form-select" aria-label=".form-select-lg example" (change)="cityChanged()">
@@ -143,7 +135,7 @@
             </select>
           </div>
         </div>
-        <div class="search-form-field rounded flex-fill">
+        <div class="search-form-field rounded flex-fill m-2">
           <label class="form-label">Bairro</label>
           <div class="d-flex flex-row align-items-center w-100">
             <select formControlName="district" class="input-style form-control form-select" aria-label=".form-select-lg example" (change)="getPropertiesList()">
@@ -153,20 +145,19 @@
           </div>
         </div>
        </div>
-       &nbsp;&nbsp;
-       <div class="search-form-field rounded">
-         <label class="form-label">Tipologia</label>
-         <div class="d-flex flex-row align-items-center w-100">
-          <select formControlName="typology" class="input-style form-control form-select" aria-label=".form-select-lg example" (change)="getPropertiesList()">
-            <option *ngFor="let col of propertyTypes" value="{{col.id}}">{{col.name}}</option>
-          </select>
-         </div>
-       </div>
-       &nbsp;&nbsp;
-       <div class="search-form-field rounded col-md-12 col-12">
-        <label class="form-label">Valor Máx</label>
-        <div class="d-flex flex-row align-items-baseline w-100">
-          <input class="input-style form-control" formControlName="price" (keydown)="priceChanged()"
+       <div class="d-flex flex-row flex-wrap">
+        <div class="search-form-field rounded flex-fill m-2">
+          <label class="form-label">Tipologia</label>
+          <div class="d-flex flex-row align-items-center w-100">
+           <select formControlName="typology" class="input-style form-control form-select" aria-label=".form-select-lg example" (change)="getPropertiesList()">
+             <option *ngFor="let col of propertyTypes" value="{{col.id}}">{{col.name}}</option>
+           </select>
+          </div>
+        </div>
+        <div class="search-form-field rounded flex-fill m-2">
+         <label class="form-label">Valor Máx</label>
+         <div class="d-flex flex-row align-items-baseline w-100">
+           <input class="input-style form-control" formControlName="price" (keydown)="priceChanged()"
              matInput
              type="text" 
              prefix="R$ " 
@@ -174,11 +165,11 @@
              thousandSeparator="." 
              placeholder="Insira o valor" 
              (keyup)="propertyPriceCurrencyMask($event.target)">
+         </div>
         </div>
-      </div>
-      &nbsp;
+       </div>
        <div class="d-flex flex-row flex-wrap">
-        <div class="search-form-field rounded flex-fill">
+        <div class="search-form-field rounded flex-fill m-2">
           <label class="form-label">Área</label>
           <div class="d-flex flex-row align-items-center w-100">
             <select formControlName="area" class="input-style form-control form-select" aria-label=".form-select-lg example" (change)="getPropertiesList()">
@@ -196,8 +187,7 @@
             </select>
           </div>
         </div>
-        &nbsp;
-        <div class="search-form-field rounded flex-fill">
+        <div class="search-form-field rounded flex-fill m-2">
           <label class="form-label">Quartos</label>
           <div class="d-flex flex-row align-items-center w-100">
             <select formControlName="rooms" class="input-style form-control form-select" aria-label=".form-select-lg example" (change)="getPropertiesList()">
@@ -208,8 +198,7 @@
             </select>
           </div>
         </div>
-        &nbsp;
-        <div class="search-form-field rounded flex-fill">
+        <div class="search-form-field rounded flex-fill m-2">
           <label class="form-label">Vagas</label>
           <div class="d-flex flex-row align-items-center w-100">
             <select formControlName="parking_spot" class="input-style form-control form-select" aria-label=".form-select-lg example" (change)="getPropertiesList()">
@@ -221,8 +210,7 @@
           </div>
         </div>
        </div>
-       &nbsp;&nbsp;
-       <div class="search-form-field rounded" style="min-width: 180px;">
+       <div class="search-form-field rounded m-2">
          <label class="form-label">Incorporadoras</label>
          <div class="d-flex flex-row align-items-center w-100">
            <select formControlName="property_developer" class="input-style form-control form-select" aria-label=".form-select-lg example" (change)="getPropertiesList()">
