Atualizações gerais de layout

--- a/src/app/modules/main/pages/home/components/app-nav-bar/app-nav-bar.component.css
+++ b/src/app/modules/main/pages/home/components/app-nav-bar/app-nav-bar.component.css
@@ -2,3 +2,14 @@ a {
   color: #012942;
   font-weight: 500;
 }
+
+.simulate-button {
+  color: white; 
+  background-color: #00479C;
+}
+
+.simulate-button:hover {
+  color: #00479C; 
+  background-color: white;
+  border: solid 1px #00479C;
+}
