--- a/src/app/modules/main/pages/home/components/app-nav-bar/app-nav-bar.component.html
+++ b/src/app/modules/main/pages/home/components/app-nav-bar/app-nav-bar.component.html
@@ -1,23 +1,14 @@
-<nav class="navbar navbar-expand-lg p-3">
+<!-- <nav class="navbar navbar-expand-lg p-3">
   <div class="container-fluid">
-     
-     <div class="col-md-6">
-       <a class="navbar-brand" href="#">
-         <img src="/assets/img/logo_crediall_complete.png" alt="Creadiall" style="height: 20px; width: 130px;">
-       </a>
-     </div>
-
-     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg">
-       <span class="navbar-toggler-icon"></span>
-     </button>     
-
-    <div class="offcanvas offcanvas-end" tabindex="-1" id="navbarOffcanvasLg" aria-labelledby="navbarOffcanvasLgLabel">
-      <div class="offcanvas-header p-4">
-        <img src="/assets/img/logo_crediall_complete.png" alt="Creadiall" style="height: 20px; width: 130px;">
-        <button type="button" class="btn-close btn-close-black" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    <div class="d-flex">
+      <div class="mr-auto">
+        <a class="navbar-brand" href="#">
+          <img src="/assets/img/logo_crediall_complete.png" alt="Creadiall" style="height: 20px; width: 130px;">
+        </a>
       </div>
-      <div class="offcanvas-body">
-        <ul class="navbar-nav justify-content-evenly flex-grow-1 pe-3">
+      
+      <div class="text-right">
+        <ul class="navbar-nav ">
           <li class="nav-item">
             <a class="nav-link" (click)="scrollToEstateHall()" style="cursor: pointer;">Salão de Imóveis</a>
           </li>
@@ -29,7 +20,56 @@
           </li>
         </ul>
       </div>
+
     </div>
+     
+       
+
+
+      
  
+  </div>
+</nav> -->
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light p-3">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+      <img src="/assets/img/logo_crediall_complete.png" alt="Creadiall" style="height: 20px; width: 130px;">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <!-- <li class="nav-item"> -->
+          <!-- <a class="nav-link active" aria-current="page" href="#"></a> -->
+        <!-- </li> -->
+      </ul>
+      <div class="d-flex">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" (click)="scrollToFindProperty()" href="#" style="color: #00479C;">Encontre um Imóvel</a>
+          </li>
+          
+          <li class="nav-item">
+            <!-- <a class="nav-link active" aria-current="page" style="color: #00479C; cursor: default;">•</a> -->
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" (click)="scrollToEstateHall()" style="color: #00479C; cursor: pointer;">Salão de Imóveis</a>
+          </li>
+          
+          <li class="nav-item">
+            <!-- <a class="nav-link active" aria-current="page" style="color: #00479C; cursor: default;">•</a> -->
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#" style="color: #00479C;"></a>
+          </li>
+          <li class="nav-item">
+            <button class="btn btn-md simulate-button" aria-current="page" (click)="scrollToSimulate()">Simule seu crédito</button>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
 </nav>
