--- a/src/app/modules/main/pages/home/home.component.css
+++ b/src/app/modules/main/pages/home/home.component.css
@@ -22,10 +22,10 @@
 
 .banner-img {
   height: 80vh;
-  background-size: auto;
+  background-size: cover;
   background-position: center; 
   background-repeat: no-repeat;
-  background-image: url("/assets/img/banner-img-2.jpg");
+  background-image: url("/assets/img/banner-img2.jpg");
 }
 
 /* SECOND  */
@@ -77,7 +77,9 @@
 .fourth {
   height: auto;
   color: #ffffff;
-  background-color: #012942;
+  background-size: cover;
+  background-position: center;
+  background-image: url("/assets/img/banner-img2.jpg");
 }
 
 .search-form-field {
@@ -88,17 +90,17 @@
   align-items: flex-start;
 
   height: 80px;
-  border: #ffffffbf;
+  border: #00479C;
   border-style: solid;
   border-width: 1px;
   text-decoration: #ffffff;
-  color: rgb(255, 255, 255);
+  color: #00479C;
   background-color: transparent;
 }
 
 .input-style {
   border: none;
-  color: #ffffffbf;
+  color: #00479C;
   background-color: transparent;
 }
 
@@ -107,7 +109,7 @@
 }
 
 option {
-  background-color: #012942;
+  background-color: white;
 }
 
 input[type='number'] {
@@ -156,6 +158,7 @@ select {
 .title {
   font-weight: 700;
   font-size: 25px;
+  color: #00479C;
 }
 
 .sub-title {
@@ -196,7 +199,32 @@ select {
   display: none;
 }
 
+.hr-parceiros {
+  visibility: hidden;
+}
+
+
+
 /* MEDIA QUERY */
+
+@media screen and (max-width: 980px) {
+  #web {
+    display: none;
+  }
+
+  #mobile {
+    display: block;
+  }
+
+  .grafico-img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .hr-parceiros {
+    visibility: visible;
+  }
+}
 
 @media screen and (max-width: 980px) {
   #web {
